the command I actually launch it with